11-06-2014 Paul Bell
	* First version 1.0.0 committed after demo at site