@@ -2,9 +2,9 @@
 from distutils.core import setup
 setup(name = 'tangods-magnetcircuit',
       version = '1.0.0',
-      description = 'Tango device for magnet circuits',
+      description = 'Tango device for magnet circuits and magnets',
       package_dir = {'MagnetCircuit':'src'},
       packages = ['MagnetCircuit'],
       author='Paul Bell',
-      scripts = ['scripts/MagnetCircuit'],
+      scripts = ['scripts/MagnetCircuit','scripts/Magnet'],
       )
