@@ -1,1 +1,2 @@
+from Magnet import *
 from MagnetCircuit import *
