@@ -1,2 +1,5 @@
 11-06-2014 Paul Bell
 	* First version 1.0.0 committed after demo at site
+
+11-06-2014 Paul Bell	
+	* Keep circuit and magnets all in this package. Still 1.0.0 until deployed.
